tests/scripts/errors/runtime/string_concat_number.cdo
VAR x = "hello" + 1;
print(x);
